# wallpaper-service

./: .gitignore  LICENSE  README.md  pyproject.toml  repo_meta.json  trait_path-dependencies.yaml  trait_published.yaml  trait_systemd-service.yaml  wallpaper-service.py  wallpaper.service
pkg/systemd/: wallpaper-service.service
src/wallpaper_service/: settings_hub_bridge.py  wallpaper_service.py
src/wallpaper_service.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
